Validaciones Movimientos y se añadio el triguer que modificara las cantidades de los articulos respecto a los movimientos.

--- a/src/cr/ac/una/ingenieria/appMVC/Vista/Modulo_Moviento.form
+++ b/src/cr/ac/una/ingenieria/appMVC/Vista/Modulo_Moviento.form
@@ -362,6 +362,10 @@
           <Font name="Times New Roman" size="14" style="1"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtCantidadActionPerformed"/>
+        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtCantidadKeyTyped"/>
+      </Events>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
       </AuxValues>
