--- a/src/cr/ac/una/ingenieria/appMVC/Vista/PantallaPrincipal.form
+++ b/src/cr/ac/una/ingenieria/appMVC/Vista/PantallaPrincipal.form
@@ -143,7 +143,7 @@
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItem2">
               <Properties>
-                <Property name="text" type="java.lang.String" value="jMenuItem2"/>
+                <Property name="text" type="java.lang.String" value="Movimientos"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem2ActionPerformed"/>
