Se hace el argar de la bodega y el tipo articulo de los jComboBox en agregar inventario

--- a/src/cr/ac/una/ingenieria/appMVC/Vista/Modulo_Inventario.form
+++ b/src/cr/ac/una/ingenieria/appMVC/Vista/Modulo_Inventario.form
@@ -48,8 +48,8 @@
                               </Group>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                  <Component id="cbBodega" max="32767" attributes="0"/>
-                                  <Component id="cbTipo" min="-2" pref="109" max="-2" attributes="0"/>
+                                  <Component id="jcb_Bodega" max="32767" attributes="0"/>
+                                  <Component id="jcb_Tipo" min="-2" pref="109" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
@@ -76,15 +76,15 @@
                       <EmptySpace min="-2" pref="78" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" attributes="0">
-                      <Component id="btInsertar" pref="147" max="32767" attributes="0"/>
+                      <Component id="btInsertar" pref="142" max="32767" attributes="0"/>
                       <EmptySpace type="unrelated" min="-2" max="-2" attributes="0"/>
-                      <Component id="btModificar" pref="131" max="32767" attributes="0"/>
+                      <Component id="btModificar" pref="126" max="32767" attributes="0"/>
                       <EmptySpace type="unrelated" min="-2" max="-2" attributes="0"/>
-                      <Component id="btBuscar" pref="77" max="32767" attributes="0"/>
+                      <Component id="btBuscar" pref="71" max="32767" attributes="0"/>
                       <EmptySpace type="unrelated" min="-2" max="-2" attributes="0"/>
-                      <Component id="btCancelar" pref="155" max="32767" attributes="0"/>
+                      <Component id="btCancelar" pref="150" max="32767" attributes="0"/>
                       <EmptySpace type="unrelated" min="-2" max="-2" attributes="0"/>
-                      <Component id="btEliminar" pref="149" max="32767" attributes="0"/>
+                      <Component id="btEliminar" pref="144" max="32767" attributes="0"/>
                       <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
@@ -116,7 +116,7 @@
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="lbBodega" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="cbBodega" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jcb_Bodega" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="lbPrecio" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="TxtPrecio" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
@@ -125,7 +125,7 @@
                   <Component id="lbPuntoPedido" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="txtPuntoPedido" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="lbTipo" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="cbTipo" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jcb_Tipo" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -233,7 +233,7 @@
         <Property name="text" type="java.lang.String" value="BODEGA:"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JComboBox" name="cbTipo">
+    <Component class="javax.swing.JComboBox" name="jcb_Tipo">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Times New Roman" size="14" style="1"/>
@@ -249,9 +249,6 @@
           </StringArray>
         </Property>
       </Properties>
-      <Events>
-        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="cbTipoKeyTyped"/>
-      </Events>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
         <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
@@ -273,7 +270,7 @@
         <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
       </AuxValues>
     </Component>
-    <Component class="javax.swing.JComboBox" name="cbBodega">
+    <Component class="javax.swing.JComboBox" name="jcb_Bodega">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Times New Roman" size="14" style="1"/>
@@ -285,9 +282,6 @@
           </StringArray>
         </Property>
       </Properties>
-      <Events>
-        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="cbBodegaKeyTyped"/>
-      </Events>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
         <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
